--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FETL QR code</string>
+    <string name="login">Sign in</string>
+    <string name="user">User :</string>
+    <string name="password">Password :</string>
+
 </resources>
